[package]
name = "web_hello"
version = "0.1.0"
authors = ["taikou-kobayashi-mg <taiko.kobayashi@m-gild.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"